--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* LIST  */
+
 .container{
 
     display: flex;
@@ -51,9 +53,71 @@
     padding: 2px 5px;
 }
 
-/*  */
+/* LIST  */
 
 
+/* INPUT */
+.checkbox{
+
+    position: relative;
+
+    margin: 5px;
+
+}
+
+.checkbox > input[type="checkbox"]{
+
+    position: absolute;
+
+    margin: 0;
+    padding: 0;
+
+    height: 20px;
+    width: 20px;
+
+    top: 50%;
+    left: 2px;
+
+    transform: translateY(-50%);
+
+}
+
+.checkbox > label{
+
+    position: relative;
+
+    display: block;
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+
+    border: 2px solid transparent;
+
+    border-radius: 2px;
+
+}
+
+.checkbox > label > .input1{
+
+    display: block;
+
+    margin-top: 5px;
+    padding: 10px;
+
+    height: 20px;
+
+    width: 100px;
+    max-width: 100%;
+
+}
+
+.checkbox > input[type="checkbox"]:checked + label {
+
+    border: 2px solid grey;
+
+}
+/* INPUT */
 
 #hasil_pendapatan{
 
